--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "nova-ai",
+  "name": "realtime-examples",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3022",
-    "build": "next build --turbopack ",
-    "start": "next start"
+    "dev": "next dev --port 3100",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@a2a-js/sdk": "^0.3.3",
@@ -21,8 +22,8 @@
     "@langchain/xai": "^0.1.0",
     "@modelcontextprotocol/sdk": "^1.17.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@openai/agents": "^0.1.0",
-    "@openai/agents-openai": "^0.1.0",
+    "@openai/agents": "^0.0.5",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -33,7 +34,6 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -81,7 +81,7 @@
     "cuid": "^3.0.0",
     "d3-dsv": "^3.0.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.6.1",
+    "dotenv": "^16.4.7",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "emoji-mart": "^5.6.0",
@@ -98,42 +98,44 @@
     "markdown-to-jsx": "^7.7.13",
     "motion": "^12.23.12",
     "multer": "^2.0.2",
-    "next": "^15.5.2",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
+    "openai": "^4.77.3",
     "ollama-ai-provider": "^1.2.0",
-    "openai": "^5.16.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.149",
     "prismjs": "^1.29.0",
     "prompt-sync": "^4.2.0",
-    "react": "19.1.0",
+    "react": "^19.0.0",
     "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
-    "react-markdown": "^10.1.0",
+    "react-markdown": "^9.0.3",
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^3.0.5",
     "recharts": "^2.15.4",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "uuid": "^11.1.0",
+    "uuid": "^11.0.4",
     "vaul": "^1.1.2",
-    "zod": "^4.1.5"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/prismjs": "^1.26.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
     "globals": "^15.9.0",
-    "tailwindcss": "^4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
